# proxmox-lab-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  ISSUES.md  README.md  pyproject.toml
src/lab_mcp/: config.py  server.py
src/lab_mcp/tools/: ansible.py  argocd.py  kubectl.py  lab.py  proxmox.py  terraform.py
