[project]
name = "proxmox-lab-mcp"
version = "0.1.0"
description = "MCP server for Proxmox home lab management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "proxmoxer>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lab-mcp = "lab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_mcp"]
